# RSecktor

./: .gitignore  local.properties  nest-cli.json  package.json  settings.gradle  tsconfig.json
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/rsecktor/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/nodejs-project/: config.js  package-lock.json  package.json
app/src/main/assets/nodejs-project/lib/: client.js  funcn.js  index.js
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/rsecktor/: AuthActivity.java  FirstLaunchActivity.java  ForegroundService.java  MainActivity.java  WebSocketService.java
app/src/main/java/com/example/rsecktor/Auth/: AuthActivity.java  CheckAuthActivity.java
app/src/main/java/com/example/rsecktor/Service/: ForegroundService.java  UpdateCheckerService.java  WebSocketService.java
app/src/main/res/drawable/: button_background.xml  duck.xml  phone_input_background.xml
app/src/main/res/layout/: activity_main.xml  auth.xml  auth_check.xml  first_launch.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/example/rsecktor/: ExampleUnitTest.java
src/: main.ts
src/api/: economy.controller.ts
src/api/webhooks/: yookassa.ts
src/core/: app.module.ts  bot.ts
src/core/handlers/: connection.handler.ts  messages.handler.ts
src/database/models/: group.ts  marry.ts  promocode.ts  user.ts  warn.ts
(+24 files in other folders)
